Fixed style inconsistencies on the homepage with font, and moved overlapping elements from hp-style.css to style.css, and deleting the copy.

--- a/styles/hp-style.css
+++ b/styles/hp-style.css
@@ -4,7 +4,6 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
-    font-family: "Poppins", sans-serif;
     font-weight: 300;
     
 }
@@ -113,32 +112,3 @@ header p {
     justify-content: center;
 }
 
-.search-box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 65%;
-    min-width: 700px;
-    padding-right: 1rem;
-    background-color: white;
-    border-radius: 30px;
-}
-
-.search-box input {
-    padding: 1.5rem;
-    width: 80%;
-    font-size: 1rem;
-    font-weight: 500;
-    border: 0;
-    outline: 0;
-}
-
-.search-box i {
-    font-size: 1.3rem;
-    cursor: pointer;
-}
-
-.search-box input::placeholder {
-    font-size: 1rem;
-    font-weight: 500;
-}
